# lifx-cli

./: .gitignore  README.md  mypy.ini  pyproject.toml
lifx_cli/: typer_cli.py
